doc/src/content/docs/en/0.5.x/api/command/foci-stm.mdx
---
title: FociStm
description: STM that switches a sequence of focal point coordinates at high speed
sidebar:
  order: 4
slug: en/0.5.x/api/command/foci-stm
---

import CodeTabs from "@components/CodeTabs.astro";

`FociStm` provides an STM feature that switches single- and multi-focus sound fields by a hardware timer.
Unlike [`PatternStm`](/autd3-sdk/en/0.5.x/api/command/pattern-stm/), it can only handle focal points, but multiple focal points fit in a single frame, so the number of frames is small and the latency is low.

## API

<CodeTabs rust={"FociStm::new(freq, &points, option);"} python={"FociStm(freq, points, option)"} csharp={"new FociStm(freq, points, option);"} />

| Parameter | Type                     | Description                                          |
| --------- | ------------------------ | --------------------------------------------------- |
| `freq`    | `impl Into<StmConfig>`   | Playback rate (`Freq` / `Duration` / `SamplingConfig`) |
| `points`  | `&[ControlPoints<N>]`    | Sequence of focal point samples (at least 2 samples)        |
| `option`  | `FociStmOption`          | Options such as sound speed, loop, and transition   |

Passing a `Freq` / `Duration` to `freq` represents "the frequency/period for one full cycle over all samples".
A sampling frequency can also be specified.
A `Duration` that is not divisible by the number of samples is an error (use `Nearest` to round it).

## ControlPoint / ControlPoints

A single sample is represented by `ControlPoints<N>`. `N` is the number of focal points emitted simultaneously (up to 8).

* `ControlPoint { point, phase_offset }` — focal point coordinate \[mm] and phase offset.
* `ControlPoints<N> { points: [ControlPoint; N], intensity }` — `N` focal points and an amplitude.

## FociStmOption

<CodeTabs rust={"FociStmOption {\n    bank,\n    sound_speed,\n    loop_behavior,\n    transition_mode,\n}"} python={"FociStmOption(\n    bank,\n    sound_speed,\n    loop_behavior,\n    transition_mode,\n)"} csharp={"new FociStmOption(\n    bank,\n    soundSpeed,\n    loopBehavior,\n    transitionMode\n)"} />

| Field             | Type             | Default                     | Description                            |
| ----------------- | ---------------- | --------------------------- | -------------------------------------- |
| `bank`            | `PatternBank`    | `PatternBank::B0`           | Bank to write to / play back           |
| `sound_speed`     | `Velocity`       | `340 m/s`                   | Sound speed used for focus computation |
| `loop_behavior`   | `LoopBehavior`   | `LoopBehavior::Infinite`    | Loop count                             |
| `transition_mode` | `TransitionMode` | `TransitionMode::Immediate` | Transition timing on bank switching    |

For the behavior of `loop_behavior` and `transition_mode`, see [playback control](/autd3-sdk/en/0.5.x/api/command/lowlevel/change-pattern-bank/).

## Helper Functions

Helper functions are provided to generate typical trajectories.

### circle

<CodeTabs rust={"circle(center, radius, num_points, normal, intensity, &mut dst);"} python={"circle(center, radius, num_points, normal, intensity, dst)"} csharp={"Stm.Circle(center, radius, numPoints, normal, intensity, dst);"} />

| Parameter    | Type                         | Description                          |
| ------------ | ---------------------------- | ------------------------------------ |
| `center`     | `Point3<f32>`                | Center of the circle \[mm]            |
| `radius`     | `Length`                     | Radius of the circle                 |
| `num_points` | `usize`                      | Number of points to generate         |
| `normal`     | `UnitVector3<f32>`           | Normal of the circle plane (unit vector) |
| `intensity`  | `Intensity`                  | Amplitude of each point              |
| `dst`        | `&mut Vec<ControlPoints<1>>` | Output buffer                        |

Places `num_points` points at equal intervals on a circle whose normal is `normal`.

### line

<CodeTabs rust={"line(start, end, num_points, intensity, &mut dst);"} python={"line(start, end, num_points, intensity, dst)"} csharp={"Stm.Line(start, end, numPoints, intensity, dst);"} />

| Parameter    | Type                         | Description                  |
| ------------ | ---------------------------- | ---------------------------- |
| `start`      | `Point3<f32>`                | Start point \[mm]             |
| `end`        | `Point3<f32>`                | End point \[mm]               |
| `num_points` | `usize`                      | Number of points to generate |
| `intensity`  | `Intensity`                  | Amplitude of each point      |
| `dst`        | `&mut Vec<ControlPoints<1>>` | Output buffer                |

Places `num_points` points at equal intervals along a line including the start and end points.

## Equivalent Low-Level Commands

`FociStm` is equivalent to the three commands [WriteFociBuffer](/autd3-sdk/en/0.5.x/api/command/lowlevel/write-foci-buffer/) + [ConfigFociStm](/autd3-sdk/en/0.5.x/api/command/lowlevel/config-foci-stm/) + [ChangePatternBank](/autd3-sdk/en/0.5.x/api/command/lowlevel/change-pattern-bank/). When the data fits in a single frame it is fused and sent as one frame; otherwise it expands into the three commands above.
The following is equivalent to `FociStm::new(freq, &points, option)`.

<CodeTabs rust={"WriteFociBuffer {\n    bank: option.bank,\n    index_offset: 0,\n    points: &points,\n};\nConfigFociStm {\n    bank: option.bank,\n    config: StmConfig::new(freq).into_sampling_config(points.len()),\n    size: points.len(),\n    num_foci: N, // N is the number of foci in the points\n    sound_speed: option.sound_speed,\n    loop_behavior: option.loop_behavior,\n};\nChangePatternBank {\n    bank: option.bank,\n    transition_mode: option.transition_mode,\n};"} python={"WriteFociBuffer(\n    bank=option.bank,\n    index_offset=0,\n    points=points,\n)\nConfigFociStm(\n    bank=option.bank,\n    config=StmConfig(freq).into_sampling_config(len(points)),\n    size=len(points),\n    num_foci=num_foci,\n    sound_speed=option.sound_speed,\n    loop_behavior=option.loop_behavior,\n)\nChangePatternBank(\n    bank=option.bank,\n    transition_mode=option.transition_mode,\n)"} csharp={"new WriteFociBuffer(\n    bank: option.Bank,\n    indexOffset: 0,\n    points: points\n);\nnew ConfigFociStm(\n    bank: option.Bank,\n    config: new StmConfig(freq).IntoSamplingConfig(points.Length),\n    size: (uint)points.Length,\n    numFoci: numFoci,\n    soundSpeed: option.SoundSpeed,\n    loopBehavior: option.LoopBehavior\n);\nnew ChangePatternBank(\n    bank: option.Bank,\n    transitionMode: option.TransitionMode\n);"} />

## Example

<CodeTabs rust={"use autd3_rs::commands::{FociStm, FociStmOption, circle};\nuse autd3_rs::geometry::{Autd3, Geometry, Vector3, offset};\nuse autd3_rs::units::{Hz, m, mm, s};\nuse autd3_rs::value::{Intensity, LoopBehavior, PatternBank, TransitionMode};\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_nop::Nop;\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\nlet client = Client::open(&geometry, Nop, ClientConfig::default()).await?;\n\nlet center = geometry.center() + offset(0.0 * mm, 0.0 * mm, 150.0 * mm);\nlet mut points = Vec::new();\ncircle(\n    center,\n    30.0 * mm,\n    200,\n    Vector3::z_axis(),\n    Intensity::MAX,\n    &mut points,\n);\n\nlet mut builder = client.datagram_builder();\nbuilder.push(FociStm::new(\n    1.0 * Hz,\n    &points,\n    FociStmOption {\n        bank: PatternBank::B0,\n        sound_speed: 340.0 * m / s,\n        loop_behavior: LoopBehavior::Infinite,\n        transition_mode: TransitionMode::Immediate,\n    },\n));\nlet frames = builder.build()?;\nfor frame in &frames {\n    client.send_checked(frame).await?;\n}\n\nclient.close().await?;"} python={"import asyncio\n\nimport numpy as np\n\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import FociStm, FociStmOption, StmConfig, circle\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import Hz, m, s\nfrom autd3.value import Intensity, LoopBehavior, PatternBank, TransitionMode\nfrom autd3_link_nop import Nop\n\n\nasync def main() -> None:\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n    client = await Client.open(geometry, Nop(), ClientConfig())\n\n    center = geometry.center() + np.array([0.0, 0.0, 150.0])\n    points = []\n    circle(center, 30.0, 200, [0.0, 0.0, 1.0], Intensity.MAX, points)\n\n    builder = client.datagram_builder()\n    builder.push(\n        FociStm(\n            1.0 * Hz,\n            points,\n            FociStmOption(\n                bank=PatternBank.B0,\n                sound_speed=340 * m / s,\n                loop_behavior=LoopBehavior.Infinite,\n                transition_mode=TransitionMode.Immediate,\n            ),\n        )\n    )\n    frames = builder.build()\n    for frame in frames:\n        await client.send_checked(frame)\n\n    await client.close()\n\n\nasyncio.run(main())"} csharp={"using System.Collections.Generic;\nusing System.Numerics;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing Nop = AUTD3.Link.Nop;\nusing static AUTD3.Units;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\nvar client = await Client.OpenAsync(geometry, new Nop(), new ClientConfig());\n\nvar center = geometry.Center + new Vector3(0.0f, 0.0f, 150.0f);\nvar dst = new List<ControlPoints>();\nStm.Circle(\n    center,\n    30.0f * mm,\n    200,\n    Vector3.UnitZ,\n    Intensity.Max,\n    dst\n);\nvar points = dst.ToArray();\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new FociStm(\n    1.0f * Hz,\n    points,\n    new FociStmOption(\n        bank: PatternBank.B0,\n        soundSpeed: 340.0f * m / s,\n        loopBehavior: LoopBehavior.Infinite,\n        transitionMode: TransitionMode.Immediate\n    )\n));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nawait client.CloseAsync();"} />
